--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -11,19 +11,26 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.777.0",
     "@aws-sdk/client-s3": "^3.777.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "gsap": "^3.12.7",
     "jest": "^29.7.0",
+    "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
+    "nodemon": "^3.1.9",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.175.0"
+    "tailwind-merge": "^3.0.2",
+    "three": "^0.175.0",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
