--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.777.0",
     "@aws-sdk/client-s3": "^3.777.0",
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
