--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -28,9 +28,11 @@
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
     "nodemon": "^3.1.9",
+    "oidc-client-ts": "^3.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-oidc-context": "^3.3.0",
     "tailwind-merge": "^3.0.2",
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5"
