--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.777.0",
     "@aws-sdk/client-s3": "^3.777.0",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.2",
     "@dnd-kit/accessibility": "^3.1.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
@@ -24,9 +24,10 @@
     "@testing-library/react": "^16.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.7.3",
     "gsap": "^3.12.7",
     "jest": "^29.7.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
