--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -11,12 +11,21 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.777.0",
     "@aws-sdk/client-s3": "^3.777.0",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.2",
     "@dnd-kit/accessibility": "^3.1.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@lexical/clipboard": "^0.30.0",
+    "@lexical/dragon": "^0.30.0",
+    "@lexical/headless": "^0.30.0",
+    "@lexical/history": "^0.30.0",
+    "@lexical/react": "^0.30.0",
+    "@lexical/rich-text": "^0.30.0",
+    "@lexical/selection": "^0.30.0",
+    "@lexical/text": "^0.30.0",
+    "@lexical/utils": "^0.30.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
@@ -27,6 +36,7 @@
     "framer-motion": "^12.6.2",
     "gsap": "^3.12.7",
     "jest": "^29.7.0",
+    "lexical": "^0.30.0",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
