--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.3",
+    "fuse.js": "^7.1.0",
     "gsap": "^3.12.7",
     "html5-qrcode": "^2.3.8",
     "jest": "^29.7.0",
