--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^3.1.9",
     "oidc-client-ts": "^3.2.0",
     "postcss": "^8.5.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
