--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -24,6 +24,7 @@
     "@lexical/text": "^0.30.0",
     "@lexical/utils": "^0.30.0",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
