--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.777.0",
     "@aws-sdk/client-s3": "^3.804.0",
+    "@aws-sdk/lib-dynamodb": "^3.817.0",
     "@aws-sdk/s3-request-presigner": "^3.817.0",
     "@dnd-kit/accessibility": "^3.1.1",
     "@dnd-kit/core": "^6.3.1",
