--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -51,6 +51,7 @@
     "nodemon": "^3.1.9",
     "oidc-client-ts": "^3.2.0",
     "postcss": "^8.5.3",
+    "qr-scanner": "^1.4.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
