--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
+    "@tanstack/react-table": "^8.21.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "class-variance-authority": "^0.7.1",
