--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -44,6 +44,7 @@
     "gsap": "^3.12.7",
     "html5-qrcode": "^2.3.8",
     "jest": "^29.7.0",
+    "jspdf": "^3.0.1",
     "lexical": "^0.30.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.485.0",
