Made it that Lambda function is used to generate multiple QR codes
The Lambda function now successfully generates the Bulk QR codes and still need to see if it deletes after a certain amount of time, which I guess it will.

--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.0.0",
