--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "nodemon": "^3.1.9",
     "oidc-client-ts": "^3.2.0",
     "postcss": "^8.5.3",
@@ -58,6 +59,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-oidc-context": "^3.3.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.0.2",
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5"
