--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -26,6 +26,7 @@
     "@lexical/text": "^0.30.0",
     "@lexical/utils": "^0.30.0",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.11",
