--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/accessibility": "^3.1.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@gsap/react": "^2.1.2",
     "@lexical/clipboard": "^0.30.0",
     "@lexical/dragon": "^0.30.0",
     "@lexical/headless": "^0.30.0",
