--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -25,6 +25,7 @@
     "@lexical/selection": "^0.30.0",
     "@lexical/text": "^0.30.0",
     "@lexical/utils": "^0.30.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
@@ -32,7 +33,8 @@
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "@tanstack/react-table": "^8.21.3",
