--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -45,6 +45,7 @@
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "date-fns": "^3.0.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.3",
